[project]
name            = "pybriger"
version         = "0.1.0"
description     = "python ORM"
authors         = [{name = "KazuhiroKondo", email = "hkprr13@gmail.com"}]
readme          = "README.md"
license         = {text = "MIT"}
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"